# agent-os

./: .gitignore  AGENTS.md  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README-OUTLINE.md  architecture.md  quickstart.md  readme-online.md  skills.md  todo-distributed-multi-agent-messaging.md  todo-production-hardening.md
docs/design/: llm-context-only-example.md  sdk-architecture.md  skill-progressive-disclosure.md
docs/examples/: langfuse-otel-sequence.md  small-openai-compatible-agent.md
docs/migrations/: 2026-05-07-postgres-agent-registry.sql  2026-05-07-qdrant-recall-collection.py  2026-05-07-sqlite-session-persistence.sql
scripts/: langfuse_otel_smoke_test.py  langfuse_smoke_test.py
src/agentos/: __init__.py  builder.py  context_protocol.py
tests/architecture/: test_phase7_memory_boundaries.py  test_public_api.py
tests/attachments/: test_attachment_runtime.py  test_turn_scoped_image_lifecycle.py
tests/capabilities/: __init__.py  test_builtin_skill_source.py  test_chained_skill_source.py  test_execution_backend.py  test_mcp.py  test_skills.py  test_skills_async_abc.py  test_tool_argument_validation.py  test_tool_handler_async_dispatch.py  test_tool_registry_phase5.py  test_tools.py
tests/channels/: test_a2a_adapter.py  test_a2a_server.py  test_asgi_app.py  test_asgi_app_async.py  test_health_endpoint.py  test_http_channel.py  test_input_validation.py  test_rate_limit.py  test_session_provider.py  test_sse_buffer.py  test_sse_channel.py  test_turn_request_parser.py
tests/cli/: test_cli.py
(+305 files in other folders)
