[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agent-os"
version = "0.1.0"
description = "Context-first Python agent runtime SDK."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent-os-small-agent = "agentos.examples.small_openai_agent:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
