[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agent-os"
version = "0.1.0"
description = "Context-first Python agent runtime SDK."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent-os-small-agent = "agentos.examples.small_openai_agent:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
observability = [
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
]
async-http = [
    "httpx>=0.27",
]
redis = [
    "redis>=5.0",
]
qdrant = [
    "qdrant-client>=1.9",
]
postgres = [
    "psycopg[binary]>=3.1",
]
production-memory = [
    "redis>=5.0",
    "qdrant-client>=1.9",
    "psycopg[binary]>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
